[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Tadahiro Ishisaka <tishisaka@baleen.studio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
